11.feb (ws)
      - fixed possible crash when copy/paste lyrics
      - support for new *.mscx file extension
10.feb (tb)
      - updated Dutch translation by Jaap Plaisier
9.feb (ws)
      - fixed crash in note entry mode when measure was selected and a note
        was entered with mouse
      - better check result of save operation
      - fixed: temp file was not deleted on windows
      (db)
      - added Italian handbook, updated Spanish handbook
      - updated version number on splash screen
7.feb (tb)
      - updated French translation by JLWaltener
6.feb (ws)
      - moved functionality from text palette (F2) to a context toolbar "edit tools"
        and to "text properties" dialog
      ======== Version 0.9.4 released =============
6.feb (tb)
      - updated Dutch translation and instruments by Jaap Plaisier
5.feb (ws)
      - fixed crash when inserting new instrument
4.feb (tb)
      - updated French translation by JLWaltener
      (ws)
      - fix bracket creation in new wizard (example: score with two pianos)
      - added qt translations to windows package; qt strings like "Ok" "Cancel"
        are now translated if language is available for qt
3.feb (ws)
      - fix crash if print page range is for example 1-4 on a 2 page score
      - fix semantic of print page range: (1-2 now prints page 1 and page 2)
      - fixed: in a small sized staff time sigs were displayed in full size
      - fixed: disabling midi input for windows did not work
      - updated russian translation from Alexandre Prokoudine
      - added new translation en_GB from Chris Beagles
      (tb)
      - updated Dutch translation by Jaap Plaisier
2.feb (ws)
      - resize main palettes to reasonable values
      - fix main line palette
      - fixed: simple line did not show up in line palette if compiled with
        optimizations (release) due to missing initialization
1.feb (ws)
      - fixed issue with kb note entry of voice > 0
31.jan (ws)